fixing position of tr808 page . get rid of the white space in right side..

--- a/src/App.css
+++ b/src/App.css
@@ -173,7 +173,7 @@ justify-content: center;
   background-image: linear-gradient(rgb(18, 6, 90),rgb(33, 12, 151)10%,rgb(136, 134, 146)50%,rgb(9, 3, 39));
  margin: 0;
  width: 100vw;
- height: 95vh;
+ height: 97vh;
  
 }
 
